--- a/achievements.css
+++ b/achievements.css
@@ -32,7 +32,7 @@ td {
 }
 
 .return {
-	width: 15%;
+	width: 10%;
 	height: 10%;
 	margin: 0% 0% 10% 25%;
 	float: left;
@@ -44,12 +44,13 @@ td {
 	position: fixed;
 	bottom: -10%;
 	vertical-align: middle;
+	cursor: pointer, hand;
 }
 
 .addAnAchievement {
-	width: 15%;
+	width: 10%;
 	height: 10%;
-	margin: 0% 0% 10% 55%;
+	margin: 0% 0% 10% 45%;
 	float: left;
 	text-decoration: none;
 	color: white;
@@ -59,6 +60,23 @@ td {
 	position: fixed;
 	bottom: -10%;
 	vertical-align: middle;
+	cursor: pointer, hand;
+}
+
+.deleteAnAchievement {
+	width: 10%;
+	height: 10%;
+	margin: 0% 0% 10% 65%;
+	float: left;
+	text-decoration: none;
+	color: white;
+	border: solid 2px grey;
+	background-color: grey;
+	border-radius: 10px;
+	position: fixed;
+	bottom: -10%;
+	vertical-align: middle;
+	cursor: pointer, hand;
 }
 
 .textReturn {
