--- a/ahub.css
+++ b/ahub.css
@@ -77,6 +77,14 @@ td {
 	border-radius: 0px 0px 0px 10px;
 }
 
+.lonelyBlockLeft {
+	border-radius: 10px 0px 0px 10px;
+}
+
+.lonelyBlockRight {
+	border-radius: 0px 10px 10px 0px;
+}
+
 a:link, a:visited, a:hover, a:active {
 	text-decoration: none;
 	color:white;
