--- a/achievements.css
+++ b/achievements.css
@@ -1,9 +1,10 @@
 html, body {
   margin: 0; 
   padding: 0;
-  background-color: #FFAF58;
+  background-color: #1C2B3E;
   overflow: auto;
   min-width: 1140px;
+  color: white;
 }
 
 table, tr {
@@ -20,8 +21,8 @@ td {
 .achievement {
 	width: 90%;
 	height: 10%;
-	background-color: white;
-	color: black;
+	background-color: #AE7957;
+	color: white;
 	margin: 0% 5% 1% 5%;
 	padding: 0% 5%;
 	border-radius: 10px;
@@ -39,7 +40,7 @@ td {
 	text-decoration: none;
 	color: white;
 	border: solid 2px grey;
-	background-color: grey;
+	background-color: #3F658C;
 	border-radius: 10px;
 	position: fixed;
 	bottom: -10%;
@@ -55,7 +56,7 @@ td {
 	text-decoration: none;
 	color: white;
 	border: solid 2px grey;
-	background-color: grey;
+	background-color: #3F658C;
 	border-radius: 10px;
 	position: fixed;
 	bottom: -10%;
@@ -71,7 +72,7 @@ td {
 	text-decoration: none;
 	color: white;
 	border: solid 2px grey;
-	background-color: grey;
+	background-color: #3F658C;
 	border-radius: 10px;
 	position: fixed;
 	bottom: -10%;
