--- a/reminders.css
+++ b/reminders.css
@@ -1,9 +1,10 @@
 html, body {
   margin: 0; 
   padding: 0;
-  background-color: #FFAF58;
+  background-color: #1C2B3E;
   overflow: auto;
   min-width: 1140px;
+  color: white;
 }
 
 table, tr {
@@ -20,8 +21,8 @@ td {
 .reminder {
 	width: 90%;
 	height: 10%;
-	background-color: white;
-	color: black;
+	background-color: #AE7957;
+	color: white;
 	margin: 0% 5% 1% 5%;
 	padding: 0% 5%;
 	border-radius: 10px;
@@ -43,7 +44,7 @@ td {
 	text-decoration: none;
 	color: white;
 	border: solid 2px grey;
-	background-color: grey;
+	background-color: #3F658C;
 	border-radius: 10px;
 	position: fixed;
 	bottom: -10%;
@@ -59,7 +60,7 @@ td {
 	text-decoration: none;
 	color: white;
 	border: solid 2px grey;
-	background-color: grey;
+	background-color: #3F658C;
 	border-radius: 10px;
 	position: fixed;
 	bottom: -10%;
@@ -75,7 +76,7 @@ td {
 	text-decoration: none;
 	color: white;
 	border: solid 2px grey;
-	background-color: grey;
+	background-color: #3F658C;
 	border-radius: 10px;
 	position: fixed;
 	bottom: -10%;
@@ -88,7 +89,7 @@ td {
 	height: 20%;
 	margin: 0%;
 	color: white;
-	background-color: #FFAF58;
+	background-color: #3F658C;
 	position: fixed;
 	bottom: 5%;
 	z-index: 9999;
