fixed filters and adding and deleting entries

--- a/reminders.css
+++ b/reminders.css
@@ -89,7 +89,7 @@ td {
 	height: 20%;
 	margin: 0%;
 	color: white;
-	background-color: #3F658C;
+	background-color: #1C2B3E;
 	position: fixed;
 	bottom: 5%;
 	z-index: 9999;
