--- a/achievements.css
+++ b/achievements.css
@@ -1,5 +1,3 @@
-/*Link for color reference: http://www.colorschemer.com/schemes/viewscheme.php?id=8302*/
-
 html, body {
   margin: 0; 
   padding: 0;
@@ -80,6 +78,17 @@ td {
 	bottom: -10%;
 	vertical-align: middle;
 	cursor: pointer, hand;
+}
+
+#selectDivToRemove {
+	width: 100%;
+	height: 20%;
+	margin: 0%;
+	color: white;
+	background-color: #1C2B3E;
+	position: fixed;
+	bottom: 5%;
+	z-index: 9999;
 }
 
 .textReturn {
