--- a/ahub.css
+++ b/ahub.css
@@ -1,3 +1,5 @@
+/*Link for color reference: http://www.colorschemer.com/schemes/viewscheme.php?id=8302*/
+
 html, body {
   margin: 0; 
   padding: 0;
