slight aesthetic tweaks to reminders and achievements

--- a/achievements.css
+++ b/achievements.css
@@ -33,49 +33,44 @@ td {
 }
 
 .return {
-	width: 10%;
+	width: 80%;
 	height: 10%;
-	margin: 0% 0% 10% 25%;
+	margin-top: 5%;
+	margin-left: 10%;
 	float: left;
 	text-decoration: none;
 	color: white;
 	border: solid 2px grey;
 	background-color: #3F658C;
 	border-radius: 10px;
-	position: fixed;
-	bottom: -10%;
 	vertical-align: middle;
 	cursor: pointer, hand;
 }
 
 .addAnAchievement {
-	width: 10%;
+	width: 80%;
 	height: 10%;
-	margin: 0% 0% 10% 45%;
-	float: left;
+	margin-top: 5%;
+	margin-left: 10%;
 	text-decoration: none;
 	color: white;
 	border: solid 2px grey;
 	background-color: #3F658C;
 	border-radius: 10px;
-	position: fixed;
-	bottom: -10%;
 	vertical-align: middle;
 	cursor: pointer, hand;
 }
 
 .deleteAnAchievement {
-	width: 10%;
+	width: 80%;
 	height: 10%;
-	margin: 0% 0% 10% 65%;
-	float: left;
+	margin-top: 5%;
+	margin-left: 10%;
 	text-decoration: none;
 	color: white;
 	border: solid 2px grey;
-	background-color: #3F658C;
+	background-color: #A02A0E;
 	border-radius: 10px;
-	position: fixed;
-	bottom: -10%;
 	vertical-align: middle;
 	cursor: pointer, hand;
 }
@@ -89,13 +84,14 @@ td {
 	position: fixed;
 	bottom: 5%;
 	z-index: 9999;
+	font-family: 'Quicksand', sans-serif;
 }
 
 .textReturn {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -35%);
 	text-decoration: none;
 	color: white;
 }
