--- a/ahub.css
+++ b/ahub.css
@@ -45,7 +45,7 @@ html, body {
 	border-radius: 20px;
 }
 
-#wuaPanel {
+#guestbookPanel {
 	height: 40%;
 	background-color: #AE7957;
 	border-radius: 20px;
